# mekf

./: .gitignore  Cargo.toml  README.org  flake.nix  memory.x
.cargo/: config.toml
src/: lib.rs
src/geometric_algebra/: geometric_algrbra_multivector.rs  mod.rs  r300.rs
