[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m-rt = "0.7"
panic-probe = {version="0.3", features= ["print-defmt"]}
defmt = "0.3.6"
defmt-brtt = {version = "0.1", features = ["rtt"]}
nalgebra = {version = "0.33.0", default-features = false} # linear algebra library
mpu9250 = {version = "0.25.0"}
libm = {version = "0.2.11"} # math lib for embedded
approx = {version = "0.5.1"} # approx test for floats


[dev-dependencies]
defmt-test = "0.3.2"

# for the library crate (src/lib.rs)
[lib]
harness = false

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.stm32f4xx-hal]
version = "0.20.0"
#features = ["stm32f446"]
features = ["stm32f401"]
